--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,14 +15,6 @@ project(mygame)
 
 add_compile_definitions(SHADERS_PATH="${CMAKE_CURRENT_SOURCE_DIR}/shaders/")
 
-FetchContent_Declare(
-  fastgltf
-  GIT_REPOSITORY https://github.com/spnda/fastgltf.git
-  GIT_TAG        main
-)
-
-FetchContent_MakeAvailable(fastgltf)
-
 
 set(SDL_STATIC ON)
 
@@ -34,15 +26,21 @@ add_subdirectory(thirdparty/stb_truetype) #loading ttf files
 add_subdirectory(thirdparty/glm) #math\
 #add_subdirectory(thirdparty/SDL_image)     #for clay sdl renderer
 include_directories("${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/imgui")
+add_subdirectory(thirdparty/assimp)
 
 add_executable("${CMAKE_PROJECT_NAME}"
-  src/Shader.cpp
+  src/shader.h
+  src/shader.cpp
   src/main.cpp
   src/openglErrorReporting.cpp
   src/filereader.h
-  src/camera.cpp
+  src/camera.h
   src/loadTexture.h
-  src/camera.h "thirdparty/imgui/imconfig.h" "thirdparty/imgui/imgui.cpp" "thirdparty/imgui/imgui.h" "thirdparty/imgui/imgui_demo.cpp" "thirdparty/imgui/imgui_draw.cpp" "thirdparty/imgui/imgui_internal.h" "thirdparty/imgui/imgui_tables.cpp" "thirdparty/imgui/imgui_widgets.cpp" "thirdparty/imgui/imstb_rectpack.h" "thirdparty/imgui/imstb_textedit.h" "thirdparty/imgui/imstb_truetype.h" "thirdparty/imgui/imgui_impl_sdl2.cpp" "thirdparty/imgui/imgui_impl_sdl2.h" "thirdparty/imgui/imgui_impl_sdlrenderer2.cpp" "thirdparty/imgui/imgui_impl_sdlrenderer2.h")
+  src/mesh.h
+  src/mesh.cpp
+  src/model.h
+  src/model.cpp
+  "thirdparty/imgui/imconfig.h" "thirdparty/imgui/imgui.cpp" "thirdparty/imgui/imgui.h" "thirdparty/imgui/imgui_demo.cpp" "thirdparty/imgui/imgui_draw.cpp" "thirdparty/imgui/imgui_internal.h" "thirdparty/imgui/imgui_tables.cpp" "thirdparty/imgui/imgui_widgets.cpp" "thirdparty/imgui/imstb_rectpack.h" "thirdparty/imgui/imstb_textedit.h" "thirdparty/imgui/imstb_truetype.h" "thirdparty/imgui/imgui_impl_sdl2.cpp" "thirdparty/imgui/imgui_impl_sdl2.h" "thirdparty/imgui/imgui_impl_sdlrenderer2.cpp" "thirdparty/imgui/imgui_impl_sdlrenderer2.h")
 
 set_property(TARGET "${CMAKE_PROJECT_NAME}" PROPERTY CXX_STANDARD 17)
 
@@ -65,5 +63,5 @@ endif()
 target_include_directories("${CMAKE_PROJECT_NAME}" PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include/")
 
 target_link_libraries("${CMAKE_PROJECT_NAME}" PRIVATE glm
- glad stb_image stb_truetype SDL2-static)
+ glad stb_image stb_truetype SDL2-static assimp)
 
